Help box complete

--- a/index.html
+++ b/index.html
@@ -344,51 +344,51 @@
         $("#ins_text").css("opacity", 1);
         $(".close_tag3").text("x");
         if(num==1){
-          $("#ins_text").text("How To View Movie Title\n \n Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.");
+          $("#ins_text").text("How To View Movie Title\n \nEach bubble represents a movie. Hover over a bubble to see the movie's title.");
           $("#image_tut img").attr('src','./images/1.png');
         }
         else if(num==2){
-          $("#ins_text").text("How To View Movie Info\n \n Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.");
+          $("#ins_text").text("How To View Movie Info\n \nEach bubble represents a movie. Click on a bubble to view the movie's details. Get information on the movie's cast, director, rating etc. Clicking on a movie also triggers zooming in on the movie's bubble.");
           $("#image_tut img").attr('src','./images/2.png');
         }
         else if(num==3){
-          $("#ins_text").text("How To Select Genres To View\n \n Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.");
+          $("#ins_text").text("How To Select Genres To View\n \nTo select genres to view in the cluster bubbles and timeline, use their corresponding dropdown menus in the control panel. There are 18 genres in all.");
           $("#image_tut img").attr('src','./images/3.png');
         }
         else if(num==4){
-          $("#ins_text").text("How To Find Similar Movies\n \n Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.");
+          $("#ins_text").text("How To Find Similar Movies\n \nSimilar movies are clustered together. Hover within a cluster to view it's boundary. One can also zoom into movie clusters.");
           $("#image_tut img").attr('src','./images/4.png');
         }
         else if(num==5){
-          $("#ins_text").text("How To View Genre For Trend Line\n \n Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.");
+          $("#ins_text").text("How To View Genre For Trend Line\n \nHover on a trend line in the timeline plot to view its corresponding genre name. These lines provide insight into movie genre trends over time. One can also change the category that constitutes the Y-Axis. Hovering on a trend line additionally highlights cluster bubbles of the same genre.");
           $("#image_tut img").attr('src','./images/5.png');
         }
         else if(num==6){
-          $("#ins_text").text("How To Filter Movie Bubbles\n \n Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.");
+          $("#ins_text").text("How To Filter Movie Bubbles\n \nUse the filter dropdown menu in the control panel to filter movies. Movies can be filtered by the actor, director, production companies and keywords.");
           $("#image_tut img").attr('src','./images/6.png');
         }
         else if(num==7){
-          $("#ins_text").text("How To Toggle Bubble Scale Factor\n \n Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.");
+          $("#ins_text").text("How To Toggle Bubble Scale Factor\n \nToggle the factor that determines the size of bubbles using the dropdown menu in the control panel. Options include movie rating, popularity, budget and revenue.");
           $("#image_tut img").attr('src','./images/7.png');
         }
         else if(num==8){
-          $("#ins_text").text("How To Toggle Timeline Y-Axis\n \n Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.");
+          $("#ins_text").text("How To Toggle Timeline Y-Axis\n \nThe Y-Axis category can be changed using the dropdown menu in the control panel. X-Axis dates range from 1980 to 2017.");
           $("#image_tut img").attr('src','./images/8.png');
         }
         else if(num==9){
-          $("#ins_text").text("How To Zoom In On Cluster Bubbles\n \n Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.");
+          $("#ins_text").text("How To Zoom In On Cluster Bubbles\n \nOne can zoom in on a cluster bubble by clicking on it. To zoom in to a cluster of movies, click within the cluster boundary. Clicking on a movie also displays an overlay with movie information.");
           $("#image_tut img").attr('src','./images/9.png');
         }
         else if(num==10){
-          $("#ins_text").text("How To Zoom Out Of Cluster Bubbles\n \n Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.");
+          $("#ins_text").text("How To Zoom Out Of Cluster Bubbles\n \nTo zoom out, one must click outside the cluster boundary or click again on the previously clicked area. Movie clusters can be zoomed to by clicking within the cluster boundary.");
           $("#image_tut img").attr('src','./images/10.png');
         }
         else if(num==11){
-          $("#ins_text").text("How To Map Trend Line To Bubbles\n \n Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.");
+          $("#ins_text").text("How To Map Trend Line To Bubbles\n \nHovering on a trend line highlights movies in the cluster bubbles of the same genre. Hovering on trend lines also displays the genre name.");
           $("#image_tut img").attr('src','./images/11.png');
         }
         else if(num==12){
-          $("#ins_text").text("How To Map Movie To Trend Line\n \n Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.");
+          $("#ins_text").text("How To Map Movie To Trend Line\n \nHovering on a movie highlights the trend line of the same genre as that of the movie. It also plots a point representing the movie's release year and Y-Axis value.");
           $("#image_tut img").attr('src','./images/12.png');
         }
       }
